--- a/index.html
+++ b/index.html
@@ -38,10 +38,19 @@
             <div class="ear left"></div>
             <div class="ear right"></div>
             <div class="face">
+              <div class="furNoise" aria-hidden="true"></div>
+              <div class="tuft"></div>
+              <div class="sticker"></div>
               <div class="eye left"><div class="iris"><div class="pupil"></div></div></div>
               <div class="eye right"><div class="iris"><div class="pupil"></div></div></div>
               <div class="nose"></div>
               <div class="philtrum"></div>
+              <div class="blush left"></div>
+              <div class="blush right"></div>
+              <div class="smile left"></div>
+              <div class="smile right"></div>
+              <div class="freckles left"><span></span><span></span><span></span></div>
+              <div class="freckles right"><span></span><span></span><span></span></div>
               <div class="whiskers left">
                 <span></span><span></span><span></span>
               </div>
@@ -83,6 +92,29 @@
               <button class="btn fxBtn" data-fx="fireworks" type="button">烟花</button>
               <button class="btn fxBtn" data-fx="sparkles" type="button">星屑</button>
               <button class="btn fxBtn" data-fx="glow" type="button">光晕</button>
+            </div>
+          </div>
+
+          <div class="autoBar">
+            <div class="autoLabel">自动弹奏</div>
+            <div class="autoGroup">
+              <select id="songSelect" class="select">
+                <option value="">加载中…</option>
+              </select>
+              <button id="btnAuto" class="btn" type="button">播放</button>
+              <label class="toggle">
+                <input id="loop" type="checkbox" />
+                <span>循环</span>
+              </label>
+              <label class="speed">
+                速度
+                <input id="speed" type="range" min="0.5" max="2" step="0.05" />
+                <span id="speedVal"></span>
+              </label>
+            </div>
+            <div class="autoStatus">
+              <div class="progress"><div id="songProgress" class="bar"></div></div>
+              <div id="songNote" class="note">—</div>
             </div>
           </div>
 
@@ -152,6 +184,7 @@
     </section>
   </main>
 
+  <script src="songs_data.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
