Update autoplay mouth, fish eye palette, and release notes

--- a/index.html
+++ b/index.html
@@ -214,6 +214,17 @@
             </div>
 
             <div class="ctrl">
+              <label>鱼眼配色</label>
+              <select id="sakaEyePalette" class="select small">
+                <option value="classic">Classic</option>
+                <option value="mint">Mint</option>
+                <option value="sky">Sky</option>
+                <option value="amber">Amber</option>
+                <option value="plum">Plum</option>
+              </select>
+            </div>
+
+            <div class="ctrl">
               <label>Vibrato 深度</label>
               <input id="vibDepth" type="range" min="0" max="40" step="0.1" />
               <div class="val" id="vibDepthVal"></div>
